[package]
name = "pallet-onbehalf-executor"
version = "1.0.0"
license = "Apache-2.0"
description = "Pallet for supporting fee-less transactions."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sha3 ={ version = "0.10.6", default-features = false}
ethereum = { workspace = true, features = ["with-codec"] }
scale-codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }
# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-arithmetic = { workspace = true }
pallet-evm = {workspace = true}
pallet-ethereum = {workspace = true}
fp-ethereum = {workspace = true}

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-support/std",
	"frame-system/std",
	"sp-arithmetic/std",
	"pallet-evm/std",
	"pallet-ethereum/std",
	"fp-ethereum/std",
	"sha3/std"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
